# my_ifttt

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
my_ifttt/: main.py  readwise.py  settings.py  setup_tg.py
